--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ pytest = "^7.4.0"
 black = "^23.3.0"
 ruff = "^0.0.277"
 
+[tool.ruff.isort]
+known-first-party = ["shortener"]
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
