--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,20 @@ django-ninja = "^0.22.2"
 django-ninja-apikey-mpirnat = { git = "https://github.com/mpirnat/django-ninja-apikey.git" }
 mypy = "^1.4.1"
 dj-database-url = "^2.0.0"
+django-stubs = "^4.2.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
 black = "^23.3.0"
 ruff = "^0.0.277"
+
+[tool.ruff]
+select = ["E", "W", "F", "I", "S", "B", "Q"]
+ignore = ["E501"]
+
+[tool.ruff.flake8-quotes]
+docstring-quotes = "double"
+inline-quotes = "double"
 
 [tool.ruff.isort]
 known-first-party = ["shortener"]
