--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ django-ninja-apikey-mpirnat = { git = "https://github.com/mpirnat/django-ninja-a
 mypy = "^1.4.1"
 dj-database-url = "^2.0.0"
 django-stubs = "^4.2.3"
+gunicorn = "^20.1.0"
+psycopg2-binary = "^2.9.6"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
