--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dj-database-url = "^2.0.0"
 django-stubs = "^4.2.3"
 gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.6"
+pytest-coverage = "^0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -24,7 +25,7 @@ ruff = "^0.0.277"
 
 [tool.ruff]
 select = ["E", "W", "F", "I", "S", "B", "Q"]
-ignore = ["E501"]
+ignore = ["E501", "S101"]
 
 [tool.ruff.flake8-quotes]
 docstring-quotes = "double"
