--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ django-stubs = "^4.2.3"
 gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.6"
 pytest-coverage = "^0.0"
+whitenoise = "^6.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
